@@ -1,3 +1,4 @@
 sources/build
 sources/usr
-*-src.tar.xz
+*src.tar.xz
+*src.tar.gz
